--- a/LeetCode/1391-1400/1395. 统计作战单位数（中等）.md
+++ b/LeetCode/1391-1400/1395. 统计作战单位数（中等）.md
@@ -10,7 +10,7 @@ Tag : 「树状数组」、「容斥原理」
 
 每 $3$ 个士兵可以组成一个作战单位，分组规则如下：
 
-* 从队伍中选出下标分别为 `i`、`j`、`k` 的 $3$ 名士兵，他们的评分分别为 $rating[i]$、$rating[j]$、rating[k]$
+* 从队伍中选出下标分别为 `i`、`j`、`k` 的 $3$ 名士兵，他们的评分分别为 $rating[i]$、$rating[j]$、$rating[k]$
 
 * 作战单位需满足： $rating[i] < rating[j] < rating[k]$ 或者 $rating[i] > rating[j] > rating[k]$ ，其中  $0 <= i < j < k < n$
 
@@ -112,6 +112,8 @@ class Solution {
 ---
 
 ### 双树状数组优化 - 枚举中点
+
+我们考虑将 $n$ 的数据范围提升到 $1e4$ 该如何做。
 
 上述解法的瓶颈在于我们枚举三元组中的左右端点，复杂度为 $O(n^2)$，而实际上利用三元组必然递增或递减的特性，我们可以调整为枚举终点 $j$，从而将「枚举点对」调整为「枚举中点」，复杂度为 $O(n)$。
 
