--- a/LeetCode/21-30/30. 串联所有单词的子串（困难）.md
+++ b/LeetCode/21-30/30. 串联所有单词的子串（困难）.md
@@ -1,8 +1,8 @@
 ### 题目描述
 
-这是 LeetCode 上的 **[30. 串联所有单词的子串](https://leetcode-cn.com/problems/substring-with-concatenation-of-all-words/solution/shua-chuan-lc-po-su-ha-xi-biao-jie-fa-hu-ml3x/)** ，难度为 **困难**。
+这是 LeetCode 上的 **[30. 串联所有单词的子串](https://leetcode.cn/problems/substring-with-concatenation-of-all-words/solution/by-ac_oier-enjd/)** ，难度为 **困难**。
 
-Tag : 「哈希表」、「滑动窗口」
+Tag : 「哈希表」、「滑动窗口」、「枚举」
 
 
 
@@ -34,22 +34,29 @@ words = ["word","good","best","word"]
 输出：[]
 ```
 
+提示：
+* $1 <= s.length <= 10^4$
+* `s` 由小写英文字母组成
+* $1 <= words.length <= 5000$
+* $1 <= words[i].length <= 30$
+* `words[i]` 由小写英文字母组成
+
 ---
 
 ### 朴素哈希表
 
 令 `n` 为字符串 `s` 的长度，`m` 为数组 `words` 的长度（单词的个数），`w` 为单个单词的长度。
 
-由于 `words` 里面每个单词长度固定，而我们要找的字符串只能恰好包含所有的单词，所有我们要找的目标子串的长度为 $m * w$。
+由于 `words` 里面每个单词长度固定，而我们要找的字符串只能恰好包含所有的单词，因此我们要找的目标子串的长度为 $m \times w$。
 
 那么一个直观的思路是：
 
 1. 使用哈希表 `map` 记录 `words` 中每个单词的出现次数
-2. 枚举 `s` 中的每个字符作为起点，往后取得长度为 $m * w$ 的子串 `sub`
+2. 枚举 `s` 中的每个字符作为起点，往后取得长度为 $m \times w$ 的子串 `sub`
 3. 使用哈希表 `cur ` 统计 `sub` 每个单词的出现次数（每隔 `w` 长度作为一个单词）
 4. 比较 `cur` 和 `map` 是否相同
 
-注意：在步骤 3 中，如果发现 `sub` 中包含了 `words` 没有出现的单词，可以直接剪枝。
+注意：在步骤 $3$ 中，如果发现 `sub` 中包含了 `words` 没有出现的单词，可以直接剪枝。
 
 剪枝处使用了带标签的 `continue` 语句直接回到外层循环进行。
 
@@ -57,16 +64,10 @@ words = ["word","good","best","word"]
 ```Java
 class Solution {
     public List<Integer> findSubstring(String s, String[] words) {
-        List<Integer> ans = new ArrayList<>();
-        if (words.length == 0) return ans;
-
         int n = s.length(), m = words.length, w = words[0].length();
-
         Map<String, Integer> map = new HashMap<>();
-        for (String word : words) {
-            map.put(word, map.getOrDefault(word, 0) + 1);
-        }
-
+        for (String word : words) map.put(word, map.getOrDefault(word, 0) + 1);
+        List<Integer> ans = new ArrayList<>();
         out:for (int i = 0; i + m * w <= n; i++) {
             Map<String, Integer> cur = new HashMap<>();
             String sub = s.substring(i, i + m * w);
@@ -75,29 +76,18 @@ class Solution {
                 if (!map.containsKey(item)) continue out;
                 cur.put(item, cur.getOrDefault(item, 0) + 1);
             }
-            if (cmp(cur, map)) ans.add(i);
+            if (cur.equals(map)) ans.add(i);
         }
-
         return ans;
-    }
-    boolean cmp(Map<String, Integer> m1, Map<String, Integer> m2) {
-        if (m1.size() != m2.size()) return false;
-        for (String k1 : m1.keySet()) {
-            if (!m2.containsKey(k1) || !m1.get(k1).equals(m2.get(k1))) return false;
-        }
-        for (String k2 : m2.keySet()) {
-            if (!m1.containsKey(k2) || !m1.get(k2).equals(m2.get(k2))) return false;
-        }
-        return true;
     }
 }
 ```
-* 时间复杂度：将 `words` 中的单词存入哈希表，复杂度为 $O(m)$；然后第一层循环枚举 `s` 中的每个字符作为起点，复杂度为 $O(n)$；在循环中将 `sub` 划分为 `m` 个单词进行统计，枚举了 `m - 1` 个下标，复杂度为 $O(m)$；每个字符串的长度为 `w`。整体复杂度为 $O(n \times m \times w)$
+* 时间复杂度：将 `words` 中的单词存入哈希表，复杂度为 $O(m)$（由于字符串长度固定且不超过 $30$，假定所有哈希操作均为 $O(1)$ 的）；然后第一层循环枚举 `s` 中的每个字符作为起点，复杂度为 $O(n)$；在循环中将 `sub` 划分为 `m` 个单词进行统计，枚举了 `m - 1` 个下标，复杂度为 $O(m)$；每个字符串的长度为 `w`。整体复杂度为 $O(n \times m \times w)$
 * 空间复杂度：$O(m \times w)$
 
 ---
 
-### 滑动窗口 & 哈希表
+### 滑动窗口 + 哈希表
 
 事实上，我们可以**优化这个枚举起点的过程**。
 
@@ -107,57 +97,35 @@ class Solution {
 ```Java
 class Solution {
     public List<Integer> findSubstring(String s, String[] words) {
-        List<Integer> ans = new ArrayList<>();
-        if (words.length == 0) return ans;
-
         int n = s.length(), m = words.length, w = words[0].length();
-
         // 统计 words 中「每个目标单词」的出现次数
         Map<String, Integer> map = new HashMap<>();
-        for (String word : words) {
-            map.put(word, map.getOrDefault(word, 0) + 1);
-        }
-
+        for (String word : words) map.put(word, map.getOrDefault(word, 0) + 1);
+        List<Integer> ans = new ArrayList<>();
         for (int i = 0; i < w; i++) {
             // 构建一个当前子串对应 map，统计当前子串中「每个目标单词」的出现次数
             Map<String, Integer> curMap = new HashMap<>();
-            // 滑动窗口的大小固定是 m * w
-            // 每次将下一个单词添加进 cur，上一个单词移出 cur
+            // 滑动窗口的大小固定是 m * w，每次将下一个单词添加进 curMap，上一个单词移出 curMap
             for (int j = i; j + w <= n; j += w) {   
                 String cur = s.substring(j, j + w);
+                curMap.put(cur, curMap.getOrDefault(cur, 0) + 1);
                 if (j >= i + (m * w)) {
                     int idx = j - m * w;
                     String prev = s.substring(idx, idx + w);
-                    if (curMap.get(prev) == 1) {
-                        curMap.remove(prev);
-                    } else {
-                        curMap.put(prev, curMap.get(prev) - 1);
-                    }
+                    if (curMap.get(prev) == 1) curMap.remove(prev);
+                    else curMap.put(prev, curMap.get(prev) - 1);
+                    if (!curMap.getOrDefault(prev, 0).equals(map.getOrDefault(prev, 0))) continue;
                 }
-                curMap.put(cur, curMap.getOrDefault(cur, 0) + 1);
-                // 如果当前子串对应 map 和 words 中对应的 map 相同，说明当前子串包含了「所有的目标单词」，将起始下标假如结果集
-                if (map.containsKey(cur) && curMap.get(cur).equals(map.get(cur)) && cmp(map, curMap)) {
-                    ans.add(j - (m - 1) * w);
-                }
+                if (!curMap.getOrDefault(cur, 0).equals(map.getOrDefault(cur, 0))) continue;
+                // 上面两个 continue 可以减少 map 之间的 equals 操作
+                if (curMap.equals(map)) ans.add(j - (m - 1) * w);
             }
         }
-
         return ans;
-    }
-    // 比较两个 map 是否相同
-    boolean cmp(Map<String, Integer> m1, Map<String, Integer> m2) {
-        if (m1.size() != m2.size()) return false;
-        for (String k1 : m1.keySet()) {
-            if (!m2.containsKey(k1) || !m1.get(k1).equals(m2.get(k1))) return false;
-        }
-        for (String k2 : m2.keySet()) {
-            if (!m1.containsKey(k2) || !m1.get(k2).equals(m2.get(k2))) return false;
-        }
-        return true;
     }
 }
 ```
-* 时间复杂度：将 `words` 中的单词存入哈希表，复杂度为 $O(m)$；然后枚举了取余的结果，复杂度为 $O(w)$；每次循环最多处理 `n` 长度的字符串，复杂度为 $O(n)$。整体复杂度为 $O(m + w \times n)$
+* 时间复杂度：将 `words` 中的单词存入哈希表，复杂度为 $O(m)$（由于字符串长度固定且不超过 $30$，假定所有哈希操作均为 $O(1)$ 的）；然后枚举了取余的结果，复杂度为 $O(w)$；每次循环最多处理 `n` 长度的字符串，复杂度为 $O(n)$。整体复杂度为 $O(m + w \times n)$
 * 空间复杂度：$O(m \times w)$
 
 ---
