--- a/LeetCode/121-130/127. 单词接龙（困难）.md
+++ b/LeetCode/121-130/127. 单词接龙（困难）.md
@@ -6,14 +6,14 @@ Tag : 「双向 BFS」、「启发式搜索」、「AStar 算法」
 
 
 
-字典 wordList 中从单词 beginWord 和 endWord 的 转换序列 是一个按下述规格形成的序列：
+字典 `wordList` 中从单词 `beginWord `和 `endWord` 的 转换序列 是一个按下述规格形成的序列：
 
-* 序列中第一个单词是 beginWord 。
-* 序列中最后一个单词是 endWord 。
+* 序列中第一个单词是 `beginWord` 。
+* 序列中最后一个单词是 `endWord` 。
 * 每次转换只能改变一个字母。
-* 转换过程中的中间单词必须是字典 wordList 中的单词。
+* 转换过程中的中间单词必须是字典 `wordList` 中的单词。
 
-给你两个单词 beginWord 和 endWord 和一个字典 wordList ，找到从 beginWord 到 endWord 的 最短转换序列 中的 单词数目 。如果不存在这样的转换序列，返回 0。
+给你两个单词 `beginWord `和 `endWord `和一个字典 `wordList `，找到从 `beginWord `到 `endWord `的 最短转换序列 中的 单词数目 。如果不存在这样的转换序列，返回 $0$。
 
 
 示例 1：
@@ -221,13 +221,13 @@ class Solution {
 
 ### 【补充】启发式搜索 AStar
 
-可以直接根据本题规则来设计 A* 的「启发式函数」。
+可以直接根据本题规则来设计 AStar 的「启发式函数」。
 
 比如对于两个字符串 `a` `b` 直接使用它们不同字符的数量来充当估值距离，我觉得是合适的。
 
 因为不同字符数量的差值可以确保不会超过真实距离（是一个理论最小替换次数）。
 
-注意：本题数据比较弱，用 A* 过了，但通常我们需要「确保有解」，A* 的启发搜索才会发挥真正价值。而本题，除非 `endWord` 本身就不在 `wordList` 中，其余情况我们无法很好提前判断「是否有解」。这时候 A* 将不能带来「搜索空间的优化」，效果不如「双向 BFS」。
+注意：本题数据比较弱，用 AStar  过了，但通常我们需要「确保有解」，AStar  的启发搜索才会发挥真正价值。而本题，除非 `endWord` 本身就不在 `wordList` 中，其余情况我们无法很好提前判断「是否有解」。这时候 AStar  将不能带来「搜索空间的优化」，效果不如「双向 BFS」。
 
 代码：
 ```Java
