--- a/LeetCode/411-420/417. 太平洋大西洋水流问题（中等）.md
+++ b/LeetCode/411-420/417. 太平洋大西洋水流问题（中等）.md
@@ -12,7 +12,7 @@ Tag : 「DFS」、「BFS」、「多源 BFS」、「并查集」
 
 岛上雨水较多，如果相邻单元格的高度 小于或等于 当前单元格的高度，雨水可以直接向北、南、东、西流向相邻单元格。水可以从海洋附近的任何单元格流入海洋。
 
-返回 网格坐标 `result` 的 2D列表 ，其中 $result[i] = [r_i, c_i]$ 表示雨水可以从单元格 $(r_i, c_i)$ 流向 太平洋和大西洋 。
+返回 网格坐标 `result` 的 2D 列表 ，其中 $result[i] = [r_i, c_i]$ 表示雨水可以从单元格 $(r_i, c_i)$ 流向 太平洋和大西洋 。
 
 示例 1：
 ![](https://assets.leetcode.com/uploads/2021/06/08/waterflow-grid.jpg)
@@ -103,8 +103,8 @@ class Solution {
     }
 }
 ```
-* 时间复杂度：`BFS`  和统计答案的复杂度均为 $O(m  * n)$。整体复杂度为 $O(m * n)$
-* 空间复杂度：$O(m * n)$
+* 时间复杂度：`BFS`  和统计答案的复杂度均为 $O(m \times n)$。整体复杂度为 $O(m \times n)$
+* 空间复杂度：$O(m \times n)$
 
 
 ---
@@ -156,8 +156,8 @@ class Solution {
     }
 }
 ```
-* 时间复杂度：`DFS`  和统计答案的复杂度均为 $O(m  * n)$。整体复杂度为 $O(m * n)$
-* 空间复杂度：$O(m * n)$
+* 时间复杂度：`DFS`  和统计答案的复杂度均为 $O(m \times n)$。整体复杂度为 $O(m \times n)$
+* 空间复杂度：$O(m \times n)$
 
 ---
 
@@ -225,8 +225,8 @@ class Solution {
     }
 }
 ```
-* 时间复杂度：$O(n * m)$
-* 空间复杂度：$O(n * m)$
+* 时间复杂度：$O(n \times m)$
+* 空间复杂度：$O(n \times m)$
 
 ---
 
