--- a/LeetCode/1141-1150/1143. 最长公共子序列（中等）.md
+++ b/LeetCode/1141-1150/1143. 最长公共子序列（中等）.md
@@ -6,11 +6,11 @@ Tag : 「最长公共子序列」、「LCS」、「序列 DP」
 
 
 
-给定两个字符串 text1 和 text2，返回这两个字符串的最长 公共子序列 的长度。如果不存在 公共子序列 ，返回 0 。
+给定两个字符串 `text1` 和 `text2`，返回这两个字符串的最长 公共子序列 的长度。如果不存在 公共子序列 ，返回 $0$ 。
 
 一个字符串的 子序列 是指这样一个新的字符串：它是由原字符串在不改变字符的相对顺序的情况下删除某些字符（也可以不删除任何字符）后组成的新字符串。
 
-* 例如，"ace" 是 "abcde" 的子序列，但 "aec" 不是 "abcde" 的子序列。
+* 例如，`"ace"` 是 `"abcde"` 的子序列，但 `"aec"` 不是 `"abcde"` 的子序列。
 
 两个字符串的 公共子序列 是这两个字符串所共同拥有的子序列。
 
@@ -41,12 +41,12 @@ Tag : 「最长公共子序列」、「LCS」、「序列 DP」
 ```
 
 提示：
-* 1 <= text1.length, text2.length <= 1000
-* text1 和 text2 仅由小写英文字符组成。
+* $1 <= text1.length, text2.length <= 1000$
+* `text1` 和 `text2` 仅由小写英文字符组成。
 
 ---
 
-### 动态规划【空格技巧】
+### 动态规划（空格技巧）
 
 这是一道「最长公共子序列（LCS）」的裸题。
 
@@ -63,7 +63,7 @@ Tag : 「最长公共子序列」、「LCS」、「序列 DP」
 
 通常我会习惯性往字符串头部追加一个空格，以减少边界判断（使下标从 1 开始，并很容易构造出可滚动的「有效值」）。
 
-代码：
+Java 代码：
 ```Java
 class Solution {
     public int longestCommonSubsequence(String s1, String s2) {
@@ -86,18 +86,43 @@ class Solution {
                 }
             }
         }
-
         // 减去最开始追加的空格
         return f[n][m] - 1;
     }
 }
 ```
-* 时间复杂度：$O(n * m)$
-* 空间复杂度：$O(n * m)$
+C++ 代码：
+```C++
+class Solution {
+public:
+    int longestCommonSubsequence(string s1, string s2) {
+        int n = s1.size(), m = s2.size();
+        s1 = " " + s1, s2 = " " + s2;
+        int f[n+1][m+1];
+        memset(f, 0, sizeof(f));
+
+        for(int i = 0; i <= n; i++) f[i][0] = 1;
+        for(int j = 0; j <= m; j++) f[0][j] = 1;
+
+        for(int i = 1; i <= n; i++) {
+            for(int j = 1; j <= m; j++) {
+                if(s1[i] == s2[j]) {
+                    f[i][j] = max(f[i-1][j-1] + 1, max(f[i-1][j], f[i][j-1]));
+                } else {
+                    f[i][j] = max(f[i-1][j], f[i][j-1]);
+                }
+            }
+        }
+        return f[n][m] - 1;
+    }
+};
+```
+* 时间复杂度：$O(n \times m)$
+* 空间复杂度：$O(n \times m)$
 
 ---
 
-### 动态规划【利用偏移】
+### 动态规划（利用偏移）
 
 上述「追加空格」的做法是我比较习惯的做法 🤣
 
@@ -110,8 +135,8 @@ class Solution {
 * `s1[i-1]==s2[j-1]` : $f[i][j]=f[i-1][j-1]+1$。代表使用 $s1[i-1]$ 与 $s2[j-1]$形成最长公共子序列的长度。
 * `s1[i-1]!=s2[j-1]` : $f[i][j]=max(f[i-1][j], f[i][j-1])$。代表不使用 $s1[i-1]$ 形成最长公共子序列的长度、不使用 $s2[j-1]$ 形成最长公共子序列的长度。这两种情况中的最大值。
 
-代码：
-```Java
+Java 代码：
+```Java []
 class Solution {
     public int longestCommonSubsequence(String s1, String s2) {
         int n = s1.length(), m = s2.length();
@@ -130,8 +155,70 @@ class Solution {
     }
 }
 ```
-* 时间复杂度：$O(n * m)$
-* 空间复杂度：$O(n * m)$
+Python3 代码：
+```Python3
+class Solution:
+    def longestCommonSubsequence(self, text1: str, text2: str) -> int:
+        m, n = len(text1), len(text2)
+        dp = [[0] * (n + 1) for _ in range(m + 1)]
+        for i in range(1, m + 1):
+            for j in range(1, n + 1):
+                if text1[i - 1] == text2[j - 1]:
+                    dp[i][j] = dp[i - 1][j - 1] + 1
+                else:
+                    dp[i][j] = max(dp[i - 1][j],dp[i][j - 1])
+        return dp[m][n]
+```
+C++ 代码：
+```C++
+class Solution {
+public:
+    int longestCommonSubsequence(string text1, string text2) {
+        int m = text1.size(), n = text2.size();
+        vector<vector<int>> dp(m + 1,vector<int>(n + 1,0));
+        for(int i = 1; i <= m; i++){
+            for(int j = 1; j <= n; j++){
+                if(text1[i - 1] == text2[j - 1]){
+                    dp[i][j] = dp[i - 1][j - 1] + 1;
+                }
+                else{
+                    dp[i][j] = max(dp[i - 1][j],dp[i][j - 1]);
+                }
+            }
+        }
+        return dp[m][n];
+    }
+};
+```
+Golang 代码：
+```Go
+func longestCommonSubsequence(text1 string, text2 string) int {
+    m := len(text1)
+    n := len(text2)
+    dp := make([][]int, m+1)
+    for i := range dp {
+        dp[i] = make([]int, n+1)
+    }
+    for i := 0; i < m; i++ {
+        for j := 0; j < n; j++ {
+            if text1[i] == text2[j] {
+                dp[i+1][j+1] = dp[i][j] + 1
+            } else {
+                dp[i+1][j+1] = max(dp[i][j+1], dp[i+1][j])
+            }
+        }
+    }
+    return dp[m][n]
+}
+func max(i int, j int) int {
+    if i > j {
+        return i
+    }
+    return j
+}
+```
+* 时间复杂度：$O(n \times m)$
+* 空间复杂度：$O(n \times m)$
 
 ---
 
