--- a/Index/哈希表.md
+++ b/Index/哈希表.md
@@ -28,6 +28,7 @@
 | [508. 出现次数最多的子树元素和](https://leetcode.cn/problems/most-frequent-subtree-sum/) | [LeetCode 题解链接](https://leetcode.cn/problems/most-frequent-subtree-sum/solution/by-ac_oier-t3y4/) | 中等 | 🤩🤩🤩 |
 | [519. 随机翻转矩阵](https://leetcode-cn.com/problems/random-flip-matrix/) | [LeetCode 题解链接](https://leetcode-cn.com/problems/random-flip-matrix/solution/gong-shui-san-xie-note-bie-pian-yi-ti-sh-e6gi/) | 中等 | 🤩🤩🤩🤩 |
 | [532. 数组中的 k-diff 数对](https://leetcode.cn/problems/k-diff-pairs-in-an-array/) | [LeetCode 题解链接](https://leetcode.cn/problems/k-diff-pairs-in-an-array/solution/by-ac_oier-ap3v/) | 中等 | 🤩🤩🤩🤩 |
+| [535. TinyURL 的加密与解密](https://leetcode.cn/problems/encode-and-decode-tinyurl/) | [LeetCode 题解链接](https://leetcode.cn/problems/encode-and-decode-tinyurl/solution/by-ac_oier-ca6o/) | 中等 | 🤩🤩🤩🤩 |
 | [554. 砖墙](https://leetcode-cn.com/problems/brick-wall/) | [LeetCode 题解链接](https://leetcode-cn.com/problems/brick-wall/solution/gong-shui-san-xie-zheng-nan-ze-fan-shi-y-gsri/) | 中等 | 🤩🤩🤩 |
 | [560. 和为 K 的子数组](https://leetcode.cn/problems/subarray-sum-equals-k/) | [LeetCode 题解链接](https://leetcode.cn/problems/subarray-sum-equals-k/solution/by-ac_oier-pttu/) | 中等 | 🤩🤩🤩🤩🤩 |
 | [594. 最长和谐子序列](https://leetcode-cn.com/problems/longest-harmonious-subsequence/) | [LeetCode 题解链接](https://leetcode-cn.com/problems/longest-harmonious-subsequence/solution/gong-shui-san-xie-yi-ti-shuang-jie-hua-d-quuh/) | 简单 | 🤩🤩🤩🤩 |
