✨update: Modify index

--- a/LeetCode/531-540/535. TinyURL 的加密与解密（中等）.md
+++ b/LeetCode/531-540/535. TinyURL 的加密与解密（中等）.md
@@ -41,7 +41,7 @@ string ans = obj.decode(tiny); // 返回解密后得到的原本的 URL 。
 
 同时了防止相同的 `longUrl` 多次调用，确保 `encode` 服务的「幂等性」，我们再额外建立哈希表 `origin2Tiny` 来记录原串和映射标识的对应关系。
 
-代码：
+Java 代码：
 ```Java
 public class Codec {
     Map<String, String> origin2Tiny = new HashMap<>(), tiny2Origin = new HashMap<>();
@@ -64,6 +64,30 @@ public class Codec {
 		return tiny2Origin.get(shortUrl);
     }
 }
+```
+
+Python 代码：
+
+```Python
+class Codec:
+    def __init__(self):
+        self.origin_to_tiny = {}
+        self.tiny_to_origin = {}
+        self.k = 6
+        self.prefix = 'https://acoier.com/tags/'
+        self.ss = string.ascii_letters + string.digits
+
+    def encode(self, longUrl: str) -> str:
+        while longUrl not in self.origin_to_tiny.keys():
+            cur = ''.join([self.ss[random.randint(0,len(self.ss) - 1)] for _ in range(self.k)])
+            if cur in self.tiny_to_origin.keys():
+                continue
+            self.tiny_to_origin[cur] = longUrl
+            self.origin_to_tiny[longUrl] = cur
+        return self.origin_to_tiny[longUrl]
+        
+    def decode(self, shortUrl: str) -> str:
+        return self.tiny_to_origin[shortUrl]
 ```
 * 时间复杂度：`encode` 操作复杂度为 $O(C + L)$，其中 $C = 6$ 为短串长度，$L$ 为传入参数 `longUrl` 的长度（存入哈希表需要计算 `longUrl` 哈希值，该过程需要遍历 `longUrl`）；`decode` 操作复杂度为 $O(C)$，其中 $L$ 为传入参数 `shortUrl` 的长度，该长度固定为 `prefix` 长度加 $6$
 * 空间复杂度：$O(K \times L)$，其中 $K$ 为调用次数，$L$ 为平均 `longUrl` 长度
