--- a/LeetCode/991-1000/997. 找到小镇的法官（简单）.md
+++ b/LeetCode/991-1000/997. 找到小镇的法官（简单）.md
@@ -2,7 +2,7 @@
 
 这是 LeetCode 上的 **[997. 找到小镇的法官](https://leetcode-cn.com/problems/find-the-town-judge/solution/gong-shui-san-xie-jian-dan-chu-du-ru-du-5ms57/)** ，难度为 **简单**。
 
-Tag : 「模拟」、「图论 出度入度」
+Tag : 「模拟」、「图论」
 
 
 
