✨update: Modify index

--- a/LeetCode/1231-1240/1239. 串联字符串的最大长度（中等）.md
+++ b/LeetCode/1231-1240/1239. 串联字符串的最大长度（中等）.md
@@ -2,7 +2,7 @@
 
 这是 LeetCode 上的 **[1239. 串联字符串的最大长度](https://leetcode-cn.com/problems/maximum-length-of-a-concatenated-string-with-unique-characters/solution/gong-shui-san-xie-yi-ti-san-jie-jian-zhi-nfeb/)** ，难度为 **中等**。
 
-Tag : 「DFS」、「二进制枚举」、「模拟退火」、「随机化」
+Tag : 「DFS」、「二进制枚举」、「模拟退火」、「随机化」、「启发式搜索」
 
 
 
