--- a/LeetCode/1721-1730/1723. 完成所有工作的最短时间（困难）.md
+++ b/LeetCode/1721-1730/1723. 完成所有工作的最短时间（困难）.md
@@ -2,7 +2,9 @@
 
 这是 LeetCode 上的 **[1723. 完成所有工作的最短时间](https://leetcode-cn.com/problems/find-minimum-time-to-finish-all-jobs/solution/gong-shui-san-xie-yi-ti-shuang-jie-jian-4epdd/)** ，难度为 **困难**。
 
-Tag : 「DFS」、「模拟退火」、「启发式搜素」、「随机化」
+Tag : 「DFS」、「模拟退火」、「启发式搜索」、「随机化」
+
+
 
 给你一个整数数组 `jobs` ，其中 $jobs[i]$ 是完成第 $i$ 项工作要花费的时间。
 
