--- a/LeetCode/1171-1180/1175. 质数排列（简单）.md
+++ b/LeetCode/1171-1180/1175. 质数排列（简单）.md
@@ -68,7 +68,7 @@ class Solution {
     }
 }
 ```
-* 时间复杂度：二分的复杂度为 $O(\log{n})$，计算方案数的复杂度为 $O(n)$。整体复杂度为 $O(n)$
+* 时间复杂度：二分的复杂度为 $O(\log{C})$，其中 $C = 25$ 为 $100$ 以内的质数个数；计算方案数的复杂度为 $O(n)$。整体复杂度为 $O(n)$
 * 空间复杂度：$O(C)$，其中 $C = 25$ 为 $100$ 以内的质数个数
 
 ---
