--- a/Index/图论 拓扑排序.md
+++ b/Index/图论 拓扑排序.md
@@ -4,5 +4,6 @@
 | [802. 找到最终的安全状态](https://leetcode-cn.com/problems/find-eventual-safe-states/) | [LeetCode 题解链接](https://leetcode-cn.com/problems/find-eventual-safe-states/solution/gong-shui-san-xie-noxiang-xin-ke-xue-xi-isy6u/) | 中等 | 🤩🤩🤩🤩     |
 | [851. 喧闹和富有](https://leetcode-cn.com/problems/loud-and-rich/) | [LeetCode 题解链接](https://leetcode-cn.com/problems/loud-and-rich/solution/gong-shui-san-xie-tuo-bu-pai-xu-yun-yong-ylih/) | 中等 | 🤩🤩🤩🤩     |
 | [954. 二倍数对数组](https://leetcode-cn.com/problems/array-of-doubled-pairs/) | [LeetCode 题解链接](https://leetcode-cn.com/problems/array-of-doubled-pairs/solution/by-ac_oier-d1z7/) | 中等 | 🤩🤩🤩🤩     |
+| [2049. 统计最高分的节点数目](https://leetcode-cn.com/problems/count-nodes-with-the-highest-score/) | [LeetCode 题解链接](https://leetcode-cn.com/problems/count-nodes-with-the-highest-score/solution/gong-shui-san-xie-jian-tu-dfs-by-ac_oier-ujfo/) | 中等 | 🤩🤩🤩🤩     |
 | [剑指 Offer II 114. 外星文字典](https://leetcode.cn/problems/Jf1JuT/) | [LeetCode 题解链接](https://leetcode.cn/problems/Jf1JuT/solution/by-ac_oier-4xmv/) | 困难 | 🤩🤩🤩🤩     |
 
