--- a/LeetCode/1781-1790/1786. 从第一个节点出发到最后一个节点的受限路径数（中等）.md
+++ b/LeetCode/1781-1790/1786. 从第一个节点出发到最后一个节点的受限路径数（中等）.md
@@ -2,7 +2,7 @@
 
 这是 LeetCode 上的 **[1786. 从第一个节点出发到最后一个节点的受限路径数](https://leetcode-cn.com/problems/number-of-restricted-paths-from-first-to-last-node/solution/xiang-jie-dui-you-hua-dijkstra-dong-tai-i6j0d/)** ，难度为 **中等**。
 
-Tag : 「图论最短路」、「线性 DP」
+Tag : 「最短路」、「线性 DP」
 
 
 
