--- a/LeetCode/261-270/264. 丑数 II（中等）.md
+++ b/LeetCode/261-270/264. 丑数 II（中等）.md
@@ -2,7 +2,7 @@
 
 这是 LeetCode 上的 **[264. 丑数 II](https://leetcode-cn.com/problems/ugly-number-ii/solution/gong-shui-san-xie-yi-ti-shuang-jie-you-x-3nvs/)** ，难度为 **中等**。
 
-Tag : 「多路归并」、「堆」、「优先队列」
+Tag : 「多路归并」、「优先队列（堆）」
 
 
 
