--- a/LeetCode/471-480/480. 滑动窗口中位数（困难）.md
+++ b/LeetCode/471-480/480. 滑动窗口中位数（困难）.md
@@ -2,7 +2,9 @@
 
 这是 LeetCode 上的 **[480. 滑动窗口中位数](https://leetcode-cn.com/problems/sliding-window-median/solution/xiang-jie-po-su-jie-fa-you-xian-dui-lie-mo397/)** ，难度为 **困难**。
 
-Tag : 「滑动窗口」、「堆」、「优先队列」
+Tag : 「滑动窗口」、「堆」、「优先队列（堆）」
+
+
 
 中位数是有序序列最中间的那个数。如果序列的长度是偶数，则没有最中间的数；此时中位数是最中间的两个数的平均数。
 
