--- a/LeetCode/501-510/502. IPO（困难）.md
+++ b/LeetCode/501-510/502. IPO（困难）.md
@@ -2,7 +2,7 @@
 
 这是 LeetCode 上的 **[502. IPO](https://leetcode-cn.com/problems/next-greater-element-ii/solution/cong-po-su-jie-fa-de-jiao-du-qu-li-jie-d-trht/)** ，难度为 **困难**。
 
-Tag : 「贪心」、「优先队列」、「堆」
+Tag : 「贪心」、「优先队列（堆）」
 
 
 
