--- a/LeetCode/701-710/703. 数据流中的第 K 大元素（简单）.md
+++ b/LeetCode/701-710/703. 数据流中的第 K 大元素（简单）.md
@@ -2,15 +2,15 @@
 
 这是 LeetCode 上的 **[703. 数据流中的第 K 大元素](https://leetcode-cn.com/problems/kth-largest-element-in-a-stream/solution/jian-da-ti-de-duo-chong-jie-fa-mou-pao-p-d1qi/)** ，难度为 **简单**。
 
-Tag : 「Top K」、「排序」、「堆」、「优先队列」
+Tag : 「Top K」、「排序」、「优先队列（堆）」
 
 
 
-设计一个找到数据流中第 k 大元素的类（class）。注意是排序后的第 k 大元素，不是第 k 个不同的元素。
+设计一个找到数据流中第 `k` 大元素的类（class）。注意是排序后的第 `k` 大元素，不是第 `k` 个不同的元素。
 
-请实现 KthLargest 类：
-* KthLargest(int k, int[] nums) 使用整数 k 和整数流 nums 初始化对象。
-* int add(int val) 将 val 插入数据流 nums 后，返回当前数据流中第 k 大的元素。
+请实现 `KthLargest` 类：
+* `KthLargest(int k, int[] nums)` 使用整数 `k` 和整数流 `nums` 初始化对象。
+* `int add(int val)` 将 `val` 插入数据流 `nums` 后，返回当前数据流中第 `k` 大的元素。
 
 
 示例：
@@ -31,12 +31,12 @@ kthLargest.add(4);   // return 8
 ```
 
 提示：
-* 1 <= k <= $10^4$
-* 0 <= nums.length <= $10^4$
-* -$10^4$ <= nums[i] <= $10^4$
-* -$10^4$ <= val <= $10^4$
-* 最多调用 add 方法 $10^4$ 次
-* 题目数据保证，在查找第 k 大元素时，数组中至少有 k 个元素
+* $1 <= k <= 10^4$
+* $0 <= nums.length <= 10^4$
+* $-10^4 <= nums[i] <= 10^4$
+* $-10^4 <= val <= 10^4$
+* 最多调用 `add` 方法 $10^4$ 次
+* 题目数据保证，在查找第 `k` 大元素时，数组中至少有 `k` 个元素
 
 ---
 
