--- a/LeetCode/951-960/954. 二倍数对数组（中等）.md
+++ b/LeetCode/951-960/954. 二倍数对数组（中等）.md
@@ -2,7 +2,7 @@
 
 这是 LeetCode 上的 **[954. 二倍数对数组](https://leetcode-cn.com/problems/array-of-doubled-pairs/solution/by-ac_oier-d1z7/)** ，难度为 **中等**。
 
-Tag : 「优先队列」、「堆」、「构造」、「哈希表」、「拓扑排序」
+Tag : 「优先队列（堆）」、「构造」、「哈希表」、「拓扑排序」
 
 
 
