--- a/LeetCode/面试题/面试题 17.14. 最小K个数（中等）.md
+++ b/LeetCode/面试题/面试题 17.14. 最小K个数（中等）.md
@@ -2,11 +2,11 @@
 
 这是 LeetCode 上的 **[面试题 17.14. 最小K个数](https://leetcode-cn.com/problems/smallest-k-lcci/solution/gong-shui-san-xie-yi-ti-si-jie-you-xian-yy5k5/)** ，难度为 **中等**。
 
-Tag : 「优先队列」、「堆」、「排序」
+Tag : 「优先队列」、「优先队列（堆）」、「排序」
 
 
 
-设计一个算法，找出数组中最小的k个数。以任意顺序返回这k个数均可。
+设计一个算法，找出数组中最小的 $k$ 个数。以任意顺序返回这k个数均可。
 
 示例：
 ```
@@ -16,8 +16,8 @@ Tag : 「优先队列」、「堆」、「排序」
 ```
 
 提示：
-* 0 <= len(arr) <= 100000
-* 0 <= k <= min(100000, len(arr))
+* $0 <= len(arr) <= 100000$
+* $0 <= k <= \min(100000, len(arr))$
 
 ---
 
@@ -160,7 +160,7 @@ class Solution {
     }
 }
 ```
-* 时间复杂度：由于每次都会随机选择基准值，因此每次递归的数组平均长度为 $n / 2$，那么划分数组操作的次数不会超过 $2 * n$。整体复杂度为 $O(n)$
+* 时间复杂度：由于每次都会随机选择基准值，因此每次递归的数组平均长度为 $n / 2$，那么划分数组操作的次数不会超过 $2 \times n$。整体复杂度为 $O(n)$
 * 空间复杂度：$O(\log{n})$
 
 ---
