--- a/LeetCode/1601-1610/1606. 找到处理最多请求的服务器（困难）.md
+++ b/LeetCode/1601-1610/1606. 找到处理最多请求的服务器（困难）.md
@@ -2,7 +2,7 @@
 
 这是 LeetCode 上的 **[1606. 找到处理最多请求的服务器](https://leetcode-cn.com/problems/find-servers-that-handled-most-number-of-requests/solution/by-ac_oier-zgm6/)** ，难度为 **困难**。
 
-Tag : 「数据结构」、「优先队列」、「堆」、「红黑树」、「二分」
+Tag : 「数据结构」、「优先队列（堆）」、「红黑树」、「二分」
 
 
 
