--- a/LeetCode/21-30/23. 合并K个升序链表（困难）.md
+++ b/LeetCode/21-30/23. 合并K个升序链表（困难）.md
@@ -2,7 +2,7 @@
 
 这是 LeetCode 上的 **[23. 合并K个升序链表](https://leetcode-cn.com/problems/merge-k-sorted-lists/solution/shua-chuan-lc-you-xian-dui-lie-jie-fa-sh-3flb/)** ，难度为 **中等**。
 
-Tag : 「优先队列」、「堆」、「链表」
+Tag : 「优先队列（堆）」、「链表」
 
 
 
