--- a/LeetCode/291-300/295. 数据流的中位数（困难）.md
+++ b/LeetCode/291-300/295. 数据流的中位数（困难）.md
@@ -2,7 +2,7 @@
 
 这是 LeetCode 上的 **[295. 数据流的中位数](https://leetcode-cn.com/problems/find-median-from-data-stream/solution/gong-shui-san-xie-jing-dian-shu-ju-jie-g-pqy8/)** ，难度为 **困难**。
 
-Tag : 「优先队列」、「堆」
+Tag : 「优先队列（堆）」
 
 
 
@@ -10,13 +10,13 @@ Tag : 「优先队列」、「堆」
 
 例如，
 
-[2,3,4] 的中位数是 3
-
-[2,3] 的中位数是 (2 + 3) / 2 = 2.5
+* `[2,3,4]` 的中位数是 $3$
+* `[2,3]` 的中位数是 $(2 + 3) / 2 = 2.5$
 
 设计一个支持以下两种操作的数据结构：
-* void addNum(int num) - 从数据流中添加一个整数到数据结构中。
-* double findMedian() - 返回目前所有元素的中位数。
+* `void addNum(int num)` - 从数据流中添加一个整数到数据结构中。
+* `double findMedian()` - 返回目前所有元素的中位数。
+
 示例：
 ```
 addNum(1)
@@ -27,8 +27,8 @@ findMedian() -> 2
 ```
 
 进阶:
-* 如果数据流中所有整数都在 0 到 100 范围内，你将如何优化你的算法？
-* 如果数据流中 99% 的整数都在 0 到 100 范围内，你将如何优化你的算法？
+* 如果数据流中所有整数都在 $0$ 到 $100$ 范围内，你将如何优化你的算法？
+* 如果数据流中 `99%` 的整数都在 $0$ 到 $100$ 范围内，你将如何优化你的算法？
 
 ---
 
