--- a/LeetCode/401-410/407. 接雨水 II（困难）.md
+++ b/LeetCode/401-410/407. 接雨水 II（困难）.md
@@ -2,7 +2,7 @@
 
 这是 LeetCode 上的 **[407. 接雨水 II](https://leetcode-cn.com/problems/trapping-rain-water-ii/solution/gong-shui-san-xie-jing-dian-dijkstra-yun-13ik/)** ，难度为 **困难**。
 
-Tag : 「图论最短路」、「优先队列（堆）」
+Tag : 「最短路」、「优先队列（堆）」
 
 
 
