✨update: Modify articles

--- a/LeetCode/1801-1810/1801. 积压订单中的订单总数（中等）.md
+++ b/LeetCode/1801-1810/1801. 积压订单中的订单总数（中等）.md
@@ -2,7 +2,7 @@
 
 这是 LeetCode 上的 **[1801. 积压订单中的订单总数](https://leetcode-cn.com/problems/number-of-orders-in-the-backlog/solution/gss-by-ac_oier-4pqk/)** ，难度为 **中等**。
 
-Tag : 「数据结构」、「模拟」、「优先队列」
+Tag : 「数据结构」、「模拟」、「优先队列（堆）」
 
 
 
