--- a/LeetCode/1831-1840/1834. 单线程 CPU（中等）.md
+++ b/LeetCode/1831-1840/1834. 单线程 CPU（中等）.md
@@ -2,7 +2,7 @@
 
 这是 LeetCode 上的 **[1834. 单线程 CPU](https://leetcode-cn.com/problems/single-threaded-cpu/solution/gong-shui-san-xie-shu-ju-jie-gou-yun-yon-1qk0/)** ，难度为 **中等**。
 
-Tag : 「模拟」、「排序」、「优先队列」
+Tag : 「模拟」、「排序」、「优先队列（堆）」
 
 
 
