--- a/LeetCode/211-220/218. 天际线问题（困难）.md
+++ b/LeetCode/211-220/218. 天际线问题（困难）.md
@@ -2,7 +2,7 @@
 
 这是 LeetCode 上的 **[218. 天际线问题](https://leetcode-cn.com/problems/the-skyline-problem/solution/gong-shui-san-xie-sao-miao-xian-suan-fa-0z6xc/)** ，难度为 **困难**。
 
-Tag : 「扫描线问题」、「优先队列」
+Tag : 「扫描线问题」、「优先队列（堆）」
 
 
 
