--- a/LeetCode/691-700/692. 前K个高频单词（中等）.md
+++ b/LeetCode/691-700/692. 前K个高频单词（中等）.md
@@ -2,12 +2,12 @@
 
 这是 LeetCode 上的 **[692. 前K个高频单词](https://leetcode-cn.com/problems/top-k-frequent-words/solution/gong-shui-san-xie-xiang-jie-shi-yong-ha-8dxt2/)** ，难度为 **中等**。
 
-Tag : 「哈希表」、「优先队列」
+Tag : 「哈希表」、「优先队列（堆）」
 
 
 
 
-给一非空的单词列表，返回前 k 个出现次数最多的单词。
+给一非空的单词列表，返回前 `k` 个出现次数最多的单词。
 
 返回的答案应该按单词出现频率由高到低排序。
 
@@ -34,12 +34,12 @@ Tag : 「哈希表」、「优先队列」
 ```
 
 注意：
-* 假定 k 总为有效值， 1 ≤ k ≤ 集合元素数。
+* 假定 `k` 总为有效值，`1 ≤ k ≤ 集合元素数`。
 * 输入的单词均由小写字母组成。
 
 
 扩展练习：
-* 尝试以 O(n log k) 时间复杂度和 O(n) 空间复杂度解决。
+* 尝试以 $O(n\log{k})$ 时间复杂度和 $O(n)$ 空间复杂度解决。
 
 ---
 
