--- a/LeetCode/721-730/726. 原子的数量（困难）.md
+++ b/LeetCode/721-730/726. 原子的数量（困难）.md
@@ -2,7 +2,7 @@
 
 这是 LeetCode 上的 **[726. 原子的数量](https://leetcode-cn.com/problems/number-of-atoms/solution/gong-shui-san-xie-shi-yong-xiao-ji-qiao-l5ak4/)** ，难度为 **困难**。
 
-Tag : 「模拟」、「数据结构运用」、「栈」、「哈希表」、「优先队列」
+Tag : 「模拟」、「数据结构运用」、「栈」、「哈希表」、「优先队列（堆）」
 
 
 
