--- a/LeetCode/1331-1340/1337. 矩阵中战斗力最弱的 K 行（简单）.md
+++ b/LeetCode/1331-1340/1337. 矩阵中战斗力最弱的 K 行（简单）.md
@@ -2,7 +2,7 @@
 
 这是 LeetCode 上的 **[1337. 矩阵中战斗力最弱的 K 行](https://leetcode-cn.com/problems/the-k-weakest-rows-in-a-matrix/solution/gong-shui-san-xie-yi-ti-shuang-jie-po-su-7okx/)** ，难度为 **简单**。
 
-Tag : 「优先队列」、「二分」
+Tag : 「优先队列（堆）」、「二分」
 
 
 
