--- a/LeetCode/311-320/313. 超级丑数（中等）.md
+++ b/LeetCode/311-320/313. 超级丑数（中等）.md
@@ -2,7 +2,7 @@
 
 这是 LeetCode 上的 **[313. 超级丑数](https://leetcode-cn.com/problems/super-ugly-number/solution/gong-shui-san-xie-yi-ti-shuang-jie-you-x-jyow/)** ，难度为 **中等**。
 
-Tag : 「优先队列」、「多路归并」
+Tag : 「优先队列（堆）」、「多路归并」
 
 
 
