--- a/LeetCode/371-380/373. 查找和最小的K对数字（中等）.md
+++ b/LeetCode/371-380/373. 查找和最小的K对数字（中等）.md
@@ -2,7 +2,7 @@
 
 这是 LeetCode 上的 **[373. 查找和最小的K对数字](https://leetcode-cn.com/problems/find-k-pairs-with-smallest-sums/solution/gong-shui-san-xie-duo-lu-gui-bing-yun-yo-pgw5/)** ，难度为 **中等**。
 
-Tag : 「优先队列」、「二分」、「多路归并」
+Tag : 「优先队列（堆）」、「二分」、「多路归并」
 
 
 
