--- a/LeetCode/471-480/480. 滑动窗口中位数（困难）.md
+++ b/LeetCode/471-480/480. 滑动窗口中位数（困难）.md
@@ -2,7 +2,7 @@
 
 这是 LeetCode 上的 **[480. 滑动窗口中位数](https://leetcode-cn.com/problems/sliding-window-median/solution/xiang-jie-po-su-jie-fa-you-xian-dui-lie-mo397/)** ，难度为 **困难**。
 
-Tag : 「滑动窗口」、「堆」、「优先队列（堆）」
+Tag : 「滑动窗口」、「优先队列（堆）」
 
 
 
