--- a/LeetCode/781-790/786. 第 K 个最小的素数分数（困难）.md
+++ b/LeetCode/781-790/786. 第 K 个最小的素数分数（困难）.md
@@ -2,7 +2,7 @@
 
 这是 LeetCode 上的 **[786. 第 K 个最小的素数分数](https://leetcode-cn.com/problems/k-th-smallest-prime-fraction/solution/gong-shui-san-xie-yi-ti-shuang-jie-you-x-8ymk/)** ，难度为 **困难**。
 
-Tag : 「优先队列」、「多路归并」、「二分」、「双指针」
+Tag : 「优先队列（堆）」、「多路归并」、「二分」、「双指针」
 
 
 
