--- a/LeetCode/841-850/846. 一手顺子（中等）.md
+++ b/LeetCode/841-850/846. 一手顺子（中等）.md
@@ -2,7 +2,7 @@
 
 这是 LeetCode 上的 **[846. 一手顺子](https://leetcode-cn.com/problems/hand-of-straights/solution/gong-shui-san-xie-shu-ju-jie-gou-mo-ni-t-4hxw/)** ，难度为 **中等**。
 
-Tag : 「模拟」、「优先队列」、「哈希表」
+Tag : 「模拟」、「优先队列（堆）」、「哈希表」
 
 
 
