--- a/LeetCode/面试题/面试题 17.14. 最小K个数（中等）.md
+++ b/LeetCode/面试题/面试题 17.14. 最小K个数（中等）.md
@@ -2,7 +2,7 @@
 
 这是 LeetCode 上的 **[面试题 17.14. 最小K个数](https://leetcode-cn.com/problems/smallest-k-lcci/solution/gong-shui-san-xie-yi-ti-si-jie-you-xian-yy5k5/)** ，难度为 **中等**。
 
-Tag : 「优先队列」、「优先队列（堆）」、「排序」
+Tag : 「优先队列（堆）」、「排序」
 
 
 
