--- a/Index/线段树.md
+++ b/Index/线段树.md
@@ -4,7 +4,7 @@
 | [327. 区间和的个数](https://leetcode.cn/problems/count-of-range-sum/) | [LeetCode 题解链接](https://leetcode.cn/problems/count-of-range-sum/solution/by-ac_oier-b36o/) | 困难 | 🤩🤩🤩🤩🤩    |
 | [699. 掉落的方块](https://leetcode.cn/problems/falling-squares/) | [LeetCode 题解链接](https://leetcode.cn/problems/falling-squares/solution/by-ac_oier-zpf0/) | 困难 | 🤩🤩🤩🤩     |
 | [715. Range 模块](https://leetcode.cn/problems/range-module/) | [LeetCode 题解链接](https://leetcode.cn/problems/range-module/solution/by-ac_oier-i4sw/) | 困难 | 🤩🤩🤩🤩🤩    |
-| [729. 我的日程安排表 I](https://leetcode-cn.com/problems/my-calendar-i/) | [LeetCode 题解链接](https://leetcode-cn.com/problems/my-calendar-i/solution/by-ac_oier-1znx/) | 中等 | 🤩🤩🤩🤩🤩    |
+| [729. 我的日程安排表 I](https://leetcode.cn/problems/my-calendar-i/) | [LeetCode 题解链接](https://leetcode.cn/problems/my-calendar-i/solution/by-ac_oier-hnjl/) | 中等 | 🤩🤩🤩🤩🤩    |
 | [731. 我的日程安排表 II](https://leetcode-cn.com/problems/my-calendar-ii/) | [LeetCode 题解链接](https://leetcode-cn.com/problems/my-calendar-ii/solution/by-ac_oier-okkc/) | 中等 | 🤩🤩🤩🤩🤩    |
 | [732. 我的日程安排表 III](https://leetcode-cn.com/problems/my-calendar-iii/) | [LeetCode 题解链接](https://leetcode-cn.com/problems/my-calendar-iii/solution/by-ac_oier-cv31/) | 困难 | 🤩🤩🤩🤩🤩    |
 | [933. 最近的请求次数](https://leetcode-cn.com/problems/number-of-recent-calls/) | [LeetCode 题解链接](https://leetcode-cn.com/problems/number-of-recent-calls/solution/by-ac_oier-evqe/) | 简单 | 🤩🤩🤩🤩🤩    |
