--- a/LeetCode/1701-1710/1707. 与数组中元素的最大异或值（困难）.md
+++ b/LeetCode/1701-1710/1707. 与数组中元素的最大异或值（困难）.md
@@ -2,7 +2,7 @@
 
 这是 LeetCode 上的 **[1707. 与数组中元素的最大异或值](https://leetcode-cn.com/problems/maximum-xor-with-an-element-from-array/solution/gong-shui-san-xie-jie-zhe-ge-wen-ti-lai-lypqr/)** ，难度为 **困难**。
 
-Tag : 「Trie」、「字典树」、「二分」
+Tag :「字典树」、「二分」
 
 
 
