--- a/LeetCode/201-210/208. 实现 Trie (前缀树)（中等）.md
+++ b/LeetCode/201-210/208. 实现 Trie (前缀树)（中等）.md
@@ -2,7 +2,7 @@
 
 这是 LeetCode 上的 **[208. 实现 Trie (前缀树)](https://leetcode-cn.com/problems/implement-trie-prefix-tree/solution/gong-shui-san-xie-yi-ti-shuang-jie-er-we-esm9/)** ，难度为 **中等**。
 
-Tag : 「Trie」、「字典树」
+Tag :「字典树」
 
 
 
