--- a/LeetCode/671-680/677. 键值映射（中等）.md
+++ b/LeetCode/671-680/677. 键值映射（中等）.md
@@ -6,7 +6,7 @@ Tag : 「字典树」、「DFS」、「哈希表」
 
 
 
-实现一个 MapSum 类，支持两个方法，insert 和 sum：
+实现一个 `MapSum` 类，支持两个方法，`insert` 和 `sum`：
 
 * `MapSum()` 初始化 `MapSum` 对象
 * `void insert(String key, int val)` 插入 `key-val` 键值对，字符串表示键 `key` ，整数表示值 `val` 。如果键 `key` 已经存在，那么原来的键值对将被替代成新的键值对。
@@ -30,7 +30,7 @@ mapSum.sum("ap");           // return 5 (apple + app = 3 + 2 = 5)
 ```
 
 提示：
-* `1 <= key.length, prefix.length <= 50`
+* $1 <= key.length, prefix.length <= 50$
 * `key` 和 `prefix` 仅由小写英文字母组成
 * `1 <= val <= 1000`
 * 最多调用 `50` 次 `insert` 和 `sum`
@@ -119,8 +119,8 @@ class MapSum {
     }
 }
 ```
-* 时间复杂度：令 $key$ 的最大长度为 $n$，最大调用次数为 $m$，字符集大小为 $C$（ 本题 $C$ 固定为 $26$ ），`insert` 操作的复杂度为 $O(n)$；从 `DFS` 的角度分析，`sum` 操作的复杂度为 $O(C^n)$，但事实上，对于本题具有明确的计算量上界，搜索所有的格子的复杂度为 $O(n * m * C)$
-* 空间复杂度：$O(n * m * C)$
+* 时间复杂度：令 $key$ 的最大长度为 $n$，最大调用次数为 $m$，字符集大小为 $C$（ 本题 $C$ 固定为 $26$ ），`insert` 操作的复杂度为 $O(n)$；从 `DFS` 的角度分析，`sum` 操作的复杂度为 $O(C^n)$，但事实上，对于本题具有明确的计算量上界，搜索所有的格子的复杂度为 $O(n \times m \times C)$
+* 空间复杂度：$O(n \times m \times C)$
 
 ---
 
@@ -196,7 +196,7 @@ class MapSum {
 }
 ```
 * 时间复杂度：令 $key$ 的最大长度为 $n$，`insert` 操作的复杂度为 $O(n)$；`sum` 操作的复杂度为 $O(n)$
-* 空间复杂度：令 $key$ 的最大长度为 $n$，最大调用次数为 $m$，字符集大小为 $C$（ 本题 $C$ 固定为 $26$ ），复杂度为 $O(n * m * C)$
+* 空间复杂度：令 $key$ 的最大长度为 $n$，最大调用次数为 $m$，字符集大小为 $C$（ 本题 $C$ 固定为 $26$ ），复杂度为 $O(n \times m \times C)$
 
 ---
 
